# Praktikum_VisNav

./: README.md
ex1_eigen/: CMakeLists.txt
ex1_eigen/src/: main.cpp
ex1_report/: Makefile  visnav_ex1_report.tex
ex2_coding/: CMakeLists.txt
ex2_coding/data/: RGBD-extrinsic.txt
ex2_coding/src/: build_map.cpp  disparity.cpp  draw_trajectory.cpp  left_jacobian.cpp  undistort_image.cpp
ex2_report/: Makefile  visnav_ex2_report.tex
ex3_coding/: CMakeLists.txt
ex3_coding/src/: ceres-curve-fitting.cpp  g2o-curve-fitting.cpp  gn-curve-fitting.cpp  gn-pose-estimate.cpp
ex3_report/: Makefile  visnav_ex3_report.tex
ex4_coding/: CMakeLists.txt
ex4_coding/src/: computeORB.cpp  direct_method.cpp  optical_flow.cpp
ex4_report/: Makefile  visnav_ex4_report.tex
ex5_coding/: CMakeLists.txt
ex5_coding/src/: BAL.cpp  PBA.cpp  def_bal.hpp  lib_math.hpp  lib_project.hpp
ex5_report/: Makefile  visnav_ex5_report.tex
